[tool.poetry]
name = "pwnedpwd"
version = "0.1.0"
description = "Pwned Passwords"
authors = [
    "Rato"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/pwnedpwd"
keywords = [
    "pwned",
    "passwords",
    "haveibeenpwned",
    "exposed",
    "data",
    "breach",
    "privacy",
    "cli"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
mypy = "^0.991"
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
